--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
+    "elasticsearch": "^13.2.0",
     "express": "~4.15.2",
     "jsonschema": "^1.1.1",
     "lodash": "^4.17.4",
