--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "elasticsearch": "^13.2.0",
     "express": "~4.15.2",
     "jsonschema": "^1.1.1",
+    "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.4",
     "mocha": "^3.4.2",
     "moment": "^2.18.1",
@@ -23,6 +24,7 @@
     "q": "^1.5.0",
     "redis": "^2.7.1",
     "request": "^2.81.0",
+    "sendgrid": "^5.2.2",
     "serve-favicon": "~2.4.2",
     "uuid": "^3.0.1",
     "validator": "^7.0.0"
